# services/platform/apiserver/security_agent_surface.go
@@ -21,7 +21,7 @@ func (surface *securityAgentWorkflowSurface) ServeHTTP(writer http.ResponseWrite
 		return
 	}
 	switch routed.OperationID {
-	case "listSecurityAgents", "createSecurityAgent", "getSecurityAgent", "updateSecurityAgent", "deleteSecurityAgent", "activateSecurityAgent", "simulateSecurityAgent", "runSecurityAgent", "listSecurityAgentRuns", "getSecurityAgentRun", "cancelSecurityAgentRun", "listSecurityAgentApprovals", "getSecurityAgentApproval", "decideSecurityAgentApproval":
+	case "listSecurityAgents", "createSecurityAgent", "getSecurityAgent", "updateSecurityAgent", "deleteSecurityAgent", "getSecurityAgentActivation", "activateSecurityAgent", "simulateSecurityAgent", "runSecurityAgent", "listSecurityAgentRuns", "getSecurityAgentRun", "cancelSecurityAgentRun", "listSecurityAgentApprovals", "getSecurityAgentApproval", "decideSecurityAgentApproval":
 		surface.securityAgent.ServeHTTP(writer, request)
 	default:
 		surface.workflow.ServeHTTP(writer, request)
